// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "RepositoryCatalogData",
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "object",
  },
  "usage": "public object RepositoryCatalogData { get; set; }",
}
`;

exports[`csharp snapshot 2`] = `
" \`RepositoryCatalogData\`<sup>Optional</sup> <a name=\\"\`RepositoryCatalogData\`<sup>Optional</sup>\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`csharp
public object RepositoryCatalogData { get; set; }
\`\`\`

- *Type:* object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repositoryCatalogData",
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "java.lang.Object",
  },
  "usage": "public java.lang.Object getRepositoryCatalogData();",
}
`;

exports[`java snapshot 2`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"\`repositoryCatalogData\`<sup>Optional</sup>\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`java
public java.lang.Object getRepositoryCatalogData();
\`\`\`

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repository_catalog_data",
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "typing.Any",
  },
  "usage": "repository_catalog_data: typing.Any",
}
`;

exports[`python snapshot 2`] = `
" \`repository_catalog_data\`<sup>Optional</sup> <a name=\\"\`repository_catalog_data\`<sup>Optional</sup>\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`python
repository_catalog_data: typing.Any
\`\`\`

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repositoryCatalogData",
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "any",
  },
  "usage": "public readonly repositoryCatalogData: any;",
}
`;

exports[`typescript snapshot 2`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"\`repositoryCatalogData\`<sup>Optional</sup>\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`typescript
public readonly repositoryCatalogData: any;
\`\`\`

- *Type:* any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;
